--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -19,10 +19,9 @@ nav:
 # Menu 目录
 menu:
   首页: / || fas fa-home
-  归档: /archives/ || fas fa-archive
+  分类: /categories/ || fa fa-folder-open
   标签: /tags/ || fas fa-tags
-  目录: /categories/ || fas fa-folder-open
-  友情链接: /link/ || fas fa-link
+  友链: /link/ || fas fa-link
 
 # --------------------------------------
 # Code Blocks Settings
@@ -64,29 +63,33 @@ avatar:
 disable_top_img: false
 
 # If the banner of page not setting, it will show the default_top_img
-default_top_img: img/background.jpg
+default_top_img:
 
 # The banner image of index page
 index_img: img/background.jpg
 
 # The banner image of archive page
-archive_img:
+archive:
+  top_img: /img/tags.jpg
+
+archive_generator:
+  per_page: 0
 
 # Note: tag page, not tags page
-tag_img:
+tag_img: img/tags.jpg
 
 # The banner image of tag page, you can set the banner image for each tag
 # Format:
 #  - tag name: xxxxx
-tag_per_img:
+tag_per_img: img/tags.jpg
 
 # Note: category page, not categories page
-category_img:
+category_img: img/tags.jpg
 
 # The banner image of category page, you can set the banner image for each category
 # Format:
 #  - category name: xxxxx
-category_per_img:
+category_per_img: img/tags.jpg
 
 # The background image of footer
 footer_img: true
@@ -99,7 +102,7 @@ cover:
   # Disable the cover or not
   index_enable: true
   aside_enable: true
-  archives_enable: true
+  archives_enable: false
   # When cover is not set, the default cover is displayed
   default_cover: img/background.jpg
     # - xxx.jpg
@@ -327,7 +330,7 @@ aside:
     order: 1
     sort_order:
   card_archives:
-    enable: true
+    enable: false
     # Type: monthly / yearly
     type: monthly
     # Eg: YYYY年MM月
@@ -473,7 +476,8 @@ search:
   # Choose: algolia_search / local_search / docsearch
   # leave it empty if you don't need search
   use: local_search
-  placeholder:
+  placeholder: Search for Posts
+  hits_empty:  "We didn't find any results for the search: ${query}" # 如果没有查到内容相关内容显示
 
   # Algolia Search
   algolia_search:
