--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -100,8 +100,8 @@ background: img/background.jpg
 
 cover:
   # Disable the cover or not
-  index_enable: true
-  aside_enable: true
+  index_enable: false
+  aside_enable: false
   archives_enable: false
   # When cover is not set, the default cover is displayed
   default_cover: img/background.jpg
@@ -1038,9 +1038,13 @@ css_prefix: true
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
 inject:
   head:
-    # - <link rel="stylesheet" href="/xxx.css">
+
   bottom:
     # - <script src="xxxx"></script>
+
+
+
+
 
 # CDN Settings
 # Don't modify the following settings unless you know how they work
@@ -1146,3 +1150,9 @@ CDN:
     # valine:
     # waline_css:
     # waline_js:
+# _config.butterfly.yml
+
+# 根目录/_config.butterfly.yml
+
+# 注入 CSS 样式到所有页面头部
+
