--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -63,43 +63,46 @@ avatar:
   effect: false
 
 # Disable all banner images
-disable_top_img: false
+disable_top_img:
 
 # If the banner of page not setting, it will show the default_top_img
-default_top_img: img/background.jpg
 
-# The banner image of index page
-index_img: img/background.jpg
+
+#顶部图
+index_img: transparent
+default_top_img: transparent
+#index_top_img_height: 400px #顶部图高度
+
 
 # The banner image of archive page
 archive:
-  top_img: /img/tags.jpg
+  top_img:
 
 archive_generator:
   per_page: 0
 
 # Note: tag page, not tags page
-tag_img: img/tags.jpg
+tag_img:
 
 # The banner image of tag page, you can set the banner image for each tag
 # Format:
 #  - tag name: xxxxx
-tag_per_img: img/tags.jpg
+tag_per_img:
 
 # Note: category page, not categories page
-category_img: img/tags.jpg
+category_img:
 
 # The banner image of category page, you can set the banner image for each category
 # Format:
 #  - category name: xxxxx
-category_per_img: img/tags.jpg
+category_per_img:
 
 # The background image of footer
-footer_img: true
+footer_img: transparent
 
 # Website Background
 # Can set it to color or image url
-background: img/background.jpg
+background:
 
 cover:
   # Disable the cover or not
@@ -107,7 +110,7 @@ cover:
   aside_enable: false
   archives_enable: false
   # When cover is not set, the default cover is displayed
-  default_cover: img/background.jpg
+  default_cover:
     # - xxx.jpg
 
 # Replace Broken Images
@@ -151,31 +154,48 @@ post_meta:
 # The position of site info, eg: 300px/300em/300rem/10%
 index_site_info_top:
 # The height of top_img, eg: 300px/300em/300rem
-index_top_img_height:
 
-# The subtitle on homepage
-# 首页副标题
+# 主页subtitle
 subtitle:
-  # 是否开启：true：开启，false：不开启
   enable: true
-  # 打字效果
+  # Typewriter Effect (打字效果)
   effect: true
-  # 定制 typed.js
-  # https://github.com/mattboldt/typed.js/#customization
-  typed_option:
-  # source 调用第三方服务
-  # source: false 关闭调用
-  # source: 1  调用一言网的一句话（简体） https://hitokoto.cn/
-  # source: 2  调用一句网（简体） https://yijuzhan.com/
-  # source: 3  调用今日诗词（简体） https://www.jinrishici.com/
-  # subtitle 会先显示 source , 再显示 sub 的内容
-  source: false
+  startDelay: 300 # time before typing starts in milliseconds
+  typeSpeed: 200 # type speed in milliseconds
+  backSpeed: 800 # backspacing speed in milliseconds
+  # loop (循环打字)
+  loop: true
+  # source 调用三方服务
+  # source: false 开关调用
+  # subtitle 会先显示 source , 再显示 sub 的內容
+  source: true
   # 如果关闭打字效果，subtitle 只会显示 sub 的第一行文字
   sub:
-    - 你在抱怨什么呢
-    - 为明天到来的事，说人生像是没有意义
-    - 没有选择会是唯一的路
-    - 这不是你自己的问题，人终归要好好去生活
+    - 自小刺头深草里 &#44; 而今渐觉出蓬蒿
+    - 时人不识凌云木 &#44; 直待凌云始道高
+# The subtitle on homepage
+## 首页副标题
+#subtitle:
+#  # 是否开启：true：开启，false：不开启
+#  enable: true
+#  # 打字效果
+#  effect: true
+#  # 定制 typed.js
+#  # https://github.com/mattboldt/typed.js/#customization
+#  typed_option:
+#  # source 调用第三方服务
+#  # source: false 关闭调用
+#  # source: 1  调用一言网的一句话（简体） https://hitokoto.cn/
+#  # source: 2  调用一句网（简体） https://yijuzhan.com/
+#  # source: 3  调用今日诗词（简体） https://www.jinrishici.com/
+#  # subtitle 会先显示 source , 再显示 sub 的内容
+#  source: false
+#  # 如果关闭打字效果，subtitle 只会显示 sub 的第一行文字
+#  sub:
+#    - 你在抱怨什么呢
+#    - 为明天到来的事，说人生像是没有意义
+#    - 没有选择会是唯一的路
+#    - 这不是你自己的问题，人终归要好好去生活
 
 # Article layout on the homepage
 # 1: Cover on the left, info on the right
@@ -266,13 +286,13 @@ noticeOutdate:
 # --------------------------------------
 # Footer Settings
 # --------------------------------------
+# Footer Settings
 footer:
-  owner:
-    enable: true
-    since: 2025
-  custom_text:
-  # Copyright of theme and framework
-  copyright: true
+  enable: false  # 底部栏是否启用，true=显示，false=隐藏
+  copyright: true  # 是否显示版权信息
+  powered: true    # 是否显示「由 Hexo & Butterfly 驱动」
+  theme_v: true    # 是否显示主题版本
+  custom_text: ""  # 自定义底部文字（若有）
 
 # --------------------------------------
 # Aside Settings
@@ -785,8 +805,8 @@ text_align_justify: false
 
 # Add a mask to the header and footer
 mask:
-  header: true
-  footer: true
+  header: false
+  footer: false
 
 # Loading Animation
 preloader:
@@ -1045,11 +1065,12 @@ css_prefix: true
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
 inject:
   head:
-   - <link rel="stylesheet" href="/css/mycss.css">
-   - <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
-   - <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+    - <link rel="stylesheet" href="/css/custom.css">
+#   - <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+#   - <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
   bottom:
-
+#    - <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+#    - <script src="https://cdn.jsdelivr.net/gh/xiabo2/CDN@latest/fishes.js"></script>
     # - <script src="xxxx"></script>
 
 
