--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,10 +1,11 @@
 - class_name: 友情链接
   class_desc: 那些人，那些事
+  flink_style: flexcard
   link_list:
     - name: MDLZCOOL
       link: https://mdlzcool.github.io/
       avatar: '/img/MDLZCOOL.jpg'
-      descr: 快速、简单且强大的网志框架
+      descr: mdlzcool
 
 #- class_name: 网站
 #  class_desc: 值得推荐的网站
