--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -480,23 +480,26 @@ busuanzi:
 # About the per_page
 # if you set it to true, it will load mathjax/katex script in each page
 # if you set it to false, it will load mathjax/katex script according to your setting (add the 'mathjax: true' or 'katex: true' in page's front-matter)
+#math:
+#  # Choose: mathjax, katex
+#  # Leave it empty if you don't need math
+#  use: mathjax
+#  per_page: true
+#  hide_scrollbar: false
+#
+#  mathjax:
+#    # Enable the contextual menu
+#    enableMenu: true
+#    # Choose: all / ams / none, This controls whether equations are numbered and how
+#    tags: none
+#
+#  katex:
+#    # Enable the copy KaTeX formula
+#    copy_tex: false
 math:
-  # Choose: mathjax, katex
-  # Leave it empty if you don't need math
-  use: mathjax
-  per_page: true
-  hide_scrollbar: false
-
-  mathjax:
-    # Enable the contextual menu
-    enableMenu: true
-    # Choose: all / ams / none, This controls whether equations are numbered and how
-    tags: none
-
-  katex:
-    # Enable the copy KaTeX formula
-    copy_tex: false
-
+  enable: true
+  per_page: true  # 允许单篇文章控制是否启用
+  engine: mathjax  # 或 katex
 # --------------------------------------
 # Search
 # --------------------------------------
